# pad-keyboard

./: INSTALL  README
fvkbd/: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  tags
fvkbd/app/gtk/: Makefile.am  fvkbd-gtk.desktop.in  fvkbd-ui-gtk.c  tags
fvkbd/data/images/: Makefile.am  keyboard.xml
fvkbd/examples/: Makefile.am  README
fvkbd/examples/images/: Makefile.am
fvkbd/examples/layout/: Makefile.am  keyboard-2panels.xml  keyboard-rainbow.xml
fvkbd/layout/: Makefile.am  fvkbd.dtd  japanese-s.xml  japanese.xml  keyboard-s.xml  keyboard.xml  korean-s.xml  korean.xml  russian_yawert.xml  zhuyin_hsu.xml
fvkbd/po/: POTFILES.in  zh_CN.po
fvkbd/scripts/: Makefile.am  change-inputmethod.py  disable-scim.py  move-keyboard.py  toggle-scim-ime.py
fvkbd/src/: Makefile.am  fvkbd-base.c  fvkbd-base.h  fvkbd-key.c  fvkbd-key.h  fvkbd-keyboard.c  fvkbd-keyboard.h  fvkbd-panel.c  fvkbd-panel.h  fvkbd.c  fvkbd.h  layout-utility.c  layout-utility.h  misc-utility.c  misc-utility.h  parser-utility-libxml.c  parser-utility-libxml.h  tags
fvkbd/ui/gtk/: Makefile.am  fvkbd-key-ui-gtk.c  fvkbd-key-ui-gtk.h  fvkbd-keyboard-ui-gtk.c  fvkbd-keyboard-ui-gtk.h  fvkbd-panel-ui-gtk.c  fvkbd-panel-ui-gtk.h  fvkbd-pop-win.c  fvkbd-pop-win.h  gtk-misc-utility.c  gtk-misc-utility.h  gtk-ui-base.c  gtk-ui-base.h  gtk-vkb-button.c  gtk-vkb-button.h  pixmap-utility.c  pixmap-utility.h
scim-panel-vkb-gtk-0.1.6/: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  qinqin  tags
scim-panel-vkb-gtk-0.1.6/data/: Makefile.am
scim-panel-vkb-gtk-0.1.6/data/icons/: Makefile.am  hide.xpm
scim-panel-vkb-gtk-0.1.6/modules/: Makefile.am
scim-panel-vkb-gtk-0.1.6/modules/SetupUI/: Makefile.am  scim_panel_setup.cpp  scim_panel_vkb_setup.cpp
scim-panel-vkb-gtk-0.1.6/po/: POTFILES.in  zh_CN.po
scim-panel-vkb-gtk-0.1.6/src/: .scim-panel-vkb-gtk.cpp.swo  Makefile.am  change_input.sh  hack-scim-global-config  info  is  kill_scim.sh  panel-keyboard.cpp  panel-keyboard.h  panel-settings.h  panel-utility.cpp  panel-utility.h  panel-vkb-dbus.xml  panel-vkb-dbusobj.cpp  panel-vkb-dbusobj.h  panel_private.h  run.sh  scim-panel-vkb-gtk.cpp  start_scim.sh  tags
