imagedir = $(datadir)/fvkbd/images
dist_image_DATA = \
		normal-a.png \
		normal-b.png \
		normal-c.png \
		normal-d.png \
		normal-e.png \
		normal-f.png \
		normal-g.png \
		normal-h.png \
		normal-i.png \
		normal-j.png \
		normal-k.png \
		normal-l.png \
		normal-m.png \
		normal-n.png \
		normal-o.png \
		normal-p.png \
		normal-q.png \
		normal-r.png \
		normal-s.png \
		normal-t.png \
		normal-u.png \
		normal-v.png \
		normal-w.png \
		normal-x.png \
		normal-y.png \
		normal-z.png \
		normal-0.png \
		normal-1.png \
		normal-2.png \
		normal-3.png \
		normal-4.png \
		normal-5.png \
		normal-6.png \
		normal-7.png \
		normal-8.png \
		normal-9.png \
		normal-A.png \
		normal-B.png \
		normal-C.png \
		normal-D.png \
		normal-E.png \
		normal-F.png \
		normal-G.png \
		normal-H.png \
		normal-I.png \
		normal-J.png \
		normal-K.png \
		normal-L.png \
		normal-M.png \
		normal-N.png \
		normal-O.png \
		normal-P.png \
		normal-Q.png \
		normal-R.png \
		normal-S.png \
		normal-T.png \
		normal-U.png \
		normal-V.png \
		normal-W.png \
		normal-X.png \
		normal-Y.png \
		normal-Z.png \
		press-a.png \
		press-b.png \
		press-c.png \
		press-d.png \
		press-e.png \
		press-f.png \
		press-g.png \
		press-h.png \
		press-i.png \
		press-j.png \
		press-k.png \
		press-l.png \
		press-m.png \
		press-n.png \
		press-o.png \
		press-p.png \
		press-q.png \
		press-r.png \
		press-s.png \
		press-t.png \
		press-u.png \
		press-v.png \
		press-w.png \
		press-x.png \
		press-y.png \
		press-z.png \
		press-A.png \
		press-B.png \
		press-C.png \
		press-D.png \
		press-E.png \
		press-F.png \
		press-G.png \
		press-H.png \
		press-I.png \
		press-J.png \
		press-K.png \
		press-L.png \
		press-M.png \
		press-N.png \
		press-O.png \
		press-P.png \
		press-Q.png \
		press-R.png \
		press-S.png \
		press-T.png \
		press-U.png \
		press-V.png \
		press-W.png \
		press-X.png \
		press-Y.png \
		press-Z.png \
		press-0.png \
		press-1.png \
		press-2.png \
		press-3.png \
		press-4.png \
		press-5.png \
		press-6.png \
		press-7.png \
		press-8.png \
		press-9.png \
		move-up.png \
		move-down.png \
		left-normal-123.png \
		right-normal-123.png \
		normal-sin-quotation.png \
		normal-dou-quotation.png \
		normal-left-square.png  \
		normal-right-square.png  \
		normal-^.png \
		normal-ellipsis.png \
		normal-equal.png \
		normal-{.png \
		normal-}.png \
		normal-multi.png\
		normal-divi.png \
		press-multi.png \
		press-divi.png \
		press-}.png \
		press-{.png \
		press-equal.png \
		press-ellipsis.png  \
		press-^.png \
		press-left-square.png \
		press-right-square.png \
		press-sin-quotation.png \
		press-dou-quotation.png \
		normal-key-bs.png \
		normal-space.png \
		normal-dot.png \
		normal-return.png \
		normal-hide.png \
		normal-hide-up.png \
		normal-question.png \
		normal-exclamation.png \
		normal-at.png \
		normal-under-bar.png \
		normal-middle-bar.png \
		normal-dollar.png \
		normal-add.png \
		normal-slash.png \
		normal-right-parenthese.png \
		normal-left-parenthese.png \
		normal-percent.png \
		normal-less.png \
		normal-greater.png \
		normal-sharp.png \
		normal-ampersand.png \
		normal-colon.png \
		normal-semicolon.png \
		normal-asterisk.png \
		normal-swung.png \
		normal-comma.png \
		normal-tab.png \
		normal-shift.png \
		normal-comma1.png \
		normal-dot1.png \
		normal-ab-bar.png \
		normal-ab-slash.png \
		normal-pound.png \
		normal-euro.png \
		normal-pigeon.png \
		normal-addsub.png \
		normal-greatereq.png \
		normal-lesseq.png \
		normal-12.png \
		normal-34.png \
		normal-14.png \
		normal-hua.png \
		normal-sheshi.png \
		normal-wendu.png \
		normal-right-abc.png \
		normal-left-abc.png \
		press-addsub.png \
		press-greatereq.png \
		press-lesseq.png \
		press-12.png \
		press-34.png \
		press-14.png \
		press-hua.png \
		press-sheshi.png \
		press-wendu.png \
		press-comma1.png \
		press-dot1.png \
		press-ab-bar.png \
		press-ab-slash.png \
		press-pound.png \
		press-euro.png \
		press-pigeon.png \
		press-shift.png \
		press-tab.png \
		press-comma.png \
		press-swung.png \
		press-asterisk.png \
		press-colon.png \
		press-semicolon.png \
		press-ampersand.png \
		press-sharp.png \
		press-add.png \
		press-slash.png \
		press-right-parenthese.png \
		press-left-parenthese.png \
		press-percent.png \
		press-less.png \
		press-greater.png \
		press-dollar.png \
		press-middle-bar.png  \
		press-under-bar.png \
		press-at.png \
		press-exclamation.png \
		press-question.png \
		press-key-bs.png \
		zhong.png \
		ying.png \
		press-space.png  \
		press-dot.png \
		press-return.png  \
		press-hide.png  \
		press-hide-up.png
